# beachead

./: .gitignore  BACKLOG.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
mcp-server/: .dockerignore  Dockerfile  pyproject.toml
mcp-server/src/beachead_memory_mcp/: __init__.py  auth.py  embeddings.py  server.py  vector_store.py
mcp-server/tests/: conftest.py
mcp-server/tests/integration/: __init__.py  test_server.py
mcp-server/tests/property/: __init__.py  test_auth_props.py  test_embedding_props.py  test_search_props.py
mcp-server/tests/unit/: __init__.py  test_auth.py  test_embedding.py  test_mcp_tools.py  test_vector_store.py
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/: additional_workspace_property_tests.txt  kit_generator.txt  sbx_property_tests.txt
src-tauri/scripts/: post-install.ps1  post-install.sh
src-tauri/src/: additional_workspace_property_tests.rs  agent_manager.rs  credential_manager.rs  db.rs  db_ops.rs  db_ops_repo_sync_tests.rs  db_property_tests.rs  error.rs  export_import_manager.rs  export_import_property_tests.rs  git_cli.rs  git_cli_property_tests.rs  kit_generator.rs  main.rs  mcp_container_manager.rs  mcp_container_property_tests.rs  persona_manager.rs  policy_manager.rs  port_allocator.rs  port_allocator_property_tests.rs  pty_bridge.rs  repo_credential_manager.rs  repo_sync_manager.rs  sandboxes_test.rs  sbx.rs  sbx_property_tests.rs  secret_scanner.rs  secret_scanner_property_tests.rs  server.rs  session_manager.rs  system_manager.rs  template_manager.rs  token.rs  token_property_tests.rs  types.rs  workspace_manager.rs
src-tauri/src/help/: agents.md  credentials.md  docker.md  getting-started.md  glossary.md  personas.md  policies.md  repo-sync.md  sessions.md  shared-memory.md  system-settings.md  templates.md  troubleshooting.md
src-tauri/src/routes/: agents.rs  export_import.rs  mcp_containers.rs  mcp_containers_test.rs  mod.rs  personas.rs  policies.rs  repo_sync.rs  repo_sync_test.rs  sandboxes.rs  secrets.rs  sessions.rs  system.rs  templates.rs
src/components/: CommitReviewModal.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  CreateMirrorModal.tsx  ExportImport.tsx  Layout.tsx  RepoSettingsPanel.tsx  ResizeHandle.tsx  SecretScanWarningModal.test.ts  SecretScanWarningModal.tsx  Sidebar.test.tsx  Sidebar.tsx
src/hooks/: usePolling.test.ts  usePolling.ts  useWebSocket.ts
src/lib/: api.ts  containerButtonStates.ts  sandboxButtonStates.test.ts  sandboxButtonStates.ts
src/pages/: AgentsPage.tsx  DockerPage.test.tsx  DockerPage.tsx  HelpPage.tsx  MountsView.test.tsx  PersonasPage.test.tsx  PersonasPage.tsx  PoliciesPage.tsx  RepoSyncPage.test.tsx  RepoSyncPage.tsx  SessionsPage.tsx  SystemSettingsPage.tsx
src/pages/__tests__/: DockerPage.property.test.tsx
website/: astro.config.mjs  package-lock.json  package.json
website/src/pages/: index.astro
website/src/styles/: global.css
