[package]
name = "beachead"
version = "0.1.0"
edition = "2021"
description = "Secure AI Orchestrator - manages AI agents in Docker Sandbox microVMs"
license = "MIT"
default-run = "beachead"

[[bin]]
name = "beachead-askpass"
path = "src/bin/beachead-askpass.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# HTTP/WebSocket server
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-util = "0.3"

# Docker
bollard = "0.18"

# HTTP client (for health checks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dashmap = "6"
zeroize = { version = "1", features = ["derive"] }
rand = "0.9"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"

# Credential helper / Repo Sync
keyring = "3.6"
dirs = "6"
regex = "1"

# PTY
portable-pty = "0.8"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
